cmake_minimum_required(VERSION 3.20)
project(cProj1 C)

set(CMAKE_C_STANDARD 99)

add_executable(main.c main.c)
add_executable(demo1_1.c demo1_1.c)
add_executable(demo1_2.c demo1_2.c)
add_executable(demo1_3.c demo1_3.c)
add_executable(demo3_1.c demo3_1.c)
add_executable(demo3_2.c demo3_2.c)
add_executable(demo3.c demo3.c)
add_executable(demo4.c demo4.c)
